--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,6 +3,8 @@ body {
   font-family: 'Montserrat';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100%;
+  overflow: hidden;
 }
 
 code {
