--- a/frontend/src/pages/Home/Home.module.css
+++ b/frontend/src/pages/Home/Home.module.css
@@ -1,10 +1,5 @@
 .content {
-    height: 100%;
-}
-
-.background {
     background: url('../../assests/images/Warehouse.jpg') no-repeat center center fixed;
-    background-size: 100% 100%;
-    opacity: 0.85;
+    background-size: cover;
     height: 100vh;
 }
