Added the layout for shoptracker; added order status component

--- a/frontend/src/pages/ShopTracker/components/ShopTable/ShopTable.module.css
+++ b/frontend/src/pages/ShopTracker/components/ShopTable/ShopTable.module.css
@@ -2,10 +2,11 @@
     font-size: 25px;
 }
 
-.table {
-    min-width: 500;
-}
-
 .tableHeader {
     font-size: 18px;
+}
+
+.tableContainer {
+    min-width: 500px;
+    max-width: 90%;
 }
